image for webpage character

--- a/style.css
+++ b/style.css
@@ -92,12 +92,21 @@ main{
 img{
     margin-top: 80px;
     margin-left: 175px;
-    width: 700px;
+    width: 600px;
+    height: 500px;
+    border-bottom-right-radius: 10pt;
+    border-bottom-left-radius: 15pt;
+    border-top-left-radius: 15pt;
+    border-top-right-radius: 15pt;
+    border-bottom-color: #848888;
+    image-resolution: 6000px;
+    background-origin: border-box;
     filter: grayscale(1);
 
 }
 img:hover{
     filter: grayscale(0);
     transition: 2.5s;
+    transition-delay: 20ms;
     cursor: pointer;
 }
