final css and html edit

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
     color: #d8d8d8;
     margin-top: 75%;
     margin-left: 100px;
+    margin-right: 100px;
     border-bottom: #848888 20px;
     border-top: #d8d8d8 20px;
     margin-bottom: -85%;
